inicio de eventos mouse/teclado

--- a/Desafio - Tetris.csproj
+++ b/Desafio - Tetris.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Eventos.cs" />
+    <Compile Remove="Jogo.cs" />
     <Compile Remove="Linha.cs" />
   </ItemGroup>
 
