começo criação de queries

--- a/Desafio - Tetris.csproj
+++ b/Desafio - Tetris.csproj
@@ -13,4 +13,12 @@
     <Compile Remove="Linha.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="System.Data.OleDb" Version="5.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
+  </ItemGroup>
+
 </Project>
