--- a/App.config
+++ b/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="DbType" value="SQLite" />
-    <!--<add key="DbType" value="OleDb" />-->
+	  <!--<add key="DbType" value="SqLite" />-->
+    <add key="DbType" value="OleDb" />
   </appSettings>
 </configuration>
