--- a/Desafio - Tetris.csproj
+++ b/Desafio - Tetris.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">
-
+﻿<!--<Project Sdk="Microsoft.NET.Sdk.WindowsDesktop">-->
+<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <RootNamespace>Desafio___Tetris</RootNamespace>
     <UseWindowsForms>true</UseWindowsForms>
+    <LangVersion>9</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
